[dollar] 把 dollar 搬过来